[tool.poetry]
name = "udemy-llm"
version = "0.1.0"
description = ""
authors = ["nakazono1011 <syousanitiosi1011@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "3.11.3"
gradio = "3.31.0"
python-dotenv = "1.0.0"
pydantic = "1.10.7"
langchain = "0.0.172"
openai = "0.27.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
